PUBMAN-2843 fixed: Affiliation numbering in view item details is cut off if there are more than 100 affiliations

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -273,7 +273,7 @@
 }
 
 .itemLine .affiliation {
-	width: 42em;
+	width: 41em;
 }
 
 .itemLine .creator {
